Ensure only renderable text diffs are collapsed
Other diffs (those that are too large to render anyway, image diffs,
diffs suppressed by .gitattributes) should be rendered immediately.

--- a/app/assets/stylesheets/framework/files.scss
+++ b/app/assets/stylesheets/framework/files.scss
@@ -189,3 +189,7 @@ span.idiff {
     border-bottom-right-radius: 2px;
   }
 }
+
+.nothing-here-block.diff-collapsed {
+  cursor: pointer;
+}
